@@ -3,73 +3,71 @@ package com.festago.fcm.application;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import com.festago.auth.application.AuthExtractor;
-import com.festago.auth.domain.AuthPayload;
-import com.festago.auth.domain.Role;
 import com.festago.fcm.domain.MemberFCM;
-import com.festago.fcm.dto.MemberFCMResponse;
 import com.festago.fcm.repository.MemberFCMRepository;
+import com.festago.member.repository.MemberRepository;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import org.junit.jupiter.api.DisplayNameGeneration;
+import org.junit.jupiter.api.DisplayNameGenerator.ReplaceUnderscores;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+@DisplayNameGeneration(ReplaceUnderscores.class)
+@SuppressWarnings("NonAsciiCharacters")
 @ExtendWith(MockitoExtension.class)
 class MemberFCMServiceTest {
+
+    @InjectMocks
+    MemberFCMService memberFCMService;
 
     @Mock
     MemberFCMRepository memberFCMRepository;
 
     @Mock
-    AuthExtractor authExtractor;
-
-    @InjectMocks
-    MemberFCMService memberFCMService;
+    MemberRepository memberRepository;
 
     @Test
     void 유저의_FCM_정보를_가져온다() {
         // given
-        List<MemberFCM> memberFCMS = List.of(
+        List<MemberFCM> memberFCMs = List.of(
             new MemberFCM(1L, 1L, "token"),
             new MemberFCM(2L, 1L, "token2")
         );
-        given(memberFCMRepository.findByMemberId(anyLong()))
-            .willReturn(memberFCMS);
+        given(memberFCMRepository.findAllByMemberId(anyLong()))
+            .willReturn(memberFCMs);
 
-        List<MemberFCMResponse> expect = memberFCMS.stream()
-            .map(MemberFCMResponse::from)
-            .collect(Collectors.toList());
+        List<String> expect = memberFCMs.stream()
+            .map(MemberFCM::getFcmToken)
+            .toList();
 
         // when
-        List<MemberFCMResponse> actual = memberFCMService.findMemberFCM(1L).memberFCMs();
+        List<String> actual = memberFCMService.findAllMemberFCMTokens(1L);
 
         // then
-        assertThat(actual).isEqualTo(expect);
+        assertThat(actual).containsAll(expect);
     }
 
     @Test
-    void 기존_유저의_새로운_FCM_토큰이라면_저장() {
+    void 유저의_새로운_FCM_토큰이라면_저장() {
         // given
-        String accessToken = "accessToken";
         String fcmToken = "fcmToken";
-        boolean isNewMember = false;
         Long memberId = 1L;
-        given(authExtractor.extract(any()))
-            .willReturn(new AuthPayload(memberId, Role.MEMBER));
-        given(memberFCMRepository.findByMemberIdAndFcmToken(memberId, fcmToken))
-            .willReturn(Optional.empty());
+        given(memberRepository.existsById(anyLong()))
+            .willReturn(true);
+        given(memberFCMRepository.existsByMemberIdAndFcmToken(anyLong(), anyString()))
+            .willReturn(false);
 
         // when
-        memberFCMService.saveMemberFCM(isNewMember, accessToken, fcmToken);
+        memberFCMService.saveMemberFCM(memberId, fcmToken);
 
         // then
         verify(memberFCMRepository, times(1))
@@ -77,40 +75,20 @@ class MemberFCMServiceTest {
     }
 
     @Test
-    void 기존_유저의_이미_존재하는_유저의_FCM_토큰이라면_저장하지_않는다() {
+    void 유저의_FCM_토큰이_존재하면_저장하지_않는다() {
         // given
-        String accessToken = "accessToken";
-        String originToken = "fcmToken";
-        boolean isNewMember = false;
+        String fcmToken = "fcmToken";
         Long memberId = 1L;
-        given(authExtractor.extract(any()))
-            .willReturn(new AuthPayload(memberId, Role.MEMBER));
-        given(memberFCMRepository.findByMemberIdAndFcmToken(memberId, originToken))
-            .willReturn(Optional.of(new MemberFCM(memberId, originToken)));
+        given(memberRepository.existsById(anyLong()))
+            .willReturn(true);
+        given(memberFCMRepository.existsByMemberIdAndFcmToken(anyLong(), anyString()))
+            .willReturn(true);
 
         // when
-        memberFCMService.saveMemberFCM(isNewMember, accessToken, originToken);
+        memberFCMService.saveMemberFCM(memberId, fcmToken);
 
         // then
         verify(memberFCMRepository, never())
-            .save(any(MemberFCM.class));
-    }
-
-    @Test
-    void 새로운_유저의_FCM_토큰을_저장한다() {
-        // given
-        String accessToken = "accessToken";
-        String fcmToken = "fcmToken";
-        boolean isNewMember = false;
-        Long memberId = 1L;
-        given(authExtractor.extract(any()))
-            .willReturn(new AuthPayload(memberId, Role.MEMBER));
-
-        // when
-        memberFCMService.saveMemberFCM(isNewMember, accessToken, fcmToken);
-
-        // then
-        verify(memberFCMRepository, times(1))
             .save(any(MemberFCM.class));
     }
 
@@ -120,7 +98,7 @@ class MemberFCMServiceTest {
         Long memberId = 1L;
 
         // when
-        memberFCMService.deleteMemberFCM(memberId);
+        memberFCMService.deleteAllMemberFCM(memberId);
 
         // then
         verify(memberFCMRepository, times(1))
